add /docs to be imported in main.go using swagger
